--- a/static/css/style.css
+++ b/static/css/style.css
@@ -82,6 +82,13 @@ nav .navbar-nav .nav-item .nav-link {
     font-weight: 700;
     text-transform: uppercase;
 }
+.header-link {
+    color: #333333;
+    text-decoration: none;
+}
+.header-link:hover {
+    color: rgba(0, 0, 0, 0.7);
+}
 .custom-dropdown-menu .nav .nav-item:hover {
     background-color: #663e6b;
 }
