--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,10 +2,10 @@ html {
     scroll-behavior: smooth;
   }
   body {
-      font-family: 'Lato', sans-serif !important;
+    font-family: 'Poppins', sans-serif !important;
   }
   h1,h2,h3,h4,h5,h6 {
-      font-family: 'Lato', sans-serif !important;
+    font-family: 'Poppins', sans-serif !important; 
   }
   .container {
       max-width: 1400px !important;
@@ -23,13 +23,19 @@ html {
     padding-bottom: 100px;
 }
 .bg-gray {
-    background: #f9f9f9;
+    background: #f0f6ff;
 }
 .header-section-main-div {
     background-color: white !important;
     border-color: #E4E8F6;
-    -webkit-box-shadow: 0 10px 15px rgb(0 0 0 / 5%);
-    box-shadow: 0 10px 15px rgb(0 0 0 / 5%);
+    /* -webkit-box-shadow: 0 10px 15px rgb(0 0 0 / 3%);
+    box-shadow: 0 10px 15px rgb(0 0 0 / 3%); */
+    position: relative;
+    z-index: 99;
+}
+.banner-contains-div {
+    width: 100%;
+    padding-left: 10%;
 }
 .header-section-main-div nav {
     padding: 0px;
@@ -50,7 +56,7 @@ nav .navbar-nav .nav-item {
 }
 nav .navbar-nav .nav-item .nav-link {
     font-size: 15px;
-    font-weight: 700;
+    font-weight: 600;
     text-transform: uppercase;
     padding: 0px 0px 0px 25px !important;
     color: #333333;
@@ -78,7 +84,7 @@ nav .navbar-nav .nav-item .nav-link {
     background-color: transparent;
     position: relative;
     font-size: 15px;
-    font-weight: 700;
+    font-weight: 500;
     text-transform: uppercase;
 }
 .header-link {
@@ -111,7 +117,7 @@ nav .navbar-nav .nav-item .nav-link {
     transform: translate(-50%, -50%);
 } 
 .single-dropdownmenu-div .dropdown-menu li:hover {
-    background-color: #663e6b;
+    background-color: #6a56a6;
 }
 .single-dropdownmenu-div .dropdown-menu li:hover > a {
     color: #ffffff;
@@ -132,21 +138,21 @@ footer {
     background-color: #222222;
 }
 .top-footer-div {
-    background-color: #2b2c31;
+    background-color: #343351;
     padding-top: 65px;
     padding-bottom: 65px;
 }
 .bottom-footer-div {
     padding: 20px 0px;
-    background-color: #26272b;
+    background-color: #2b2a42;
 }
 .quick-link-list-div h3 {
-    font-size: 23px;
+    font-size: 22px;
     letter-spacing: 1px;
     color: white;
     font-weight: 400;
-    text-transform: uppercase;
-    margin-bottom: 30px;
+    text-transform: capitalize;
+    margin-bottom: 25px;
 }
 .quick-link-list-div ul {
     padding: 0px;
@@ -167,7 +173,7 @@ footer {
     padding-right: 0px;
     vertical-align: middle;
     font-weight: 100;
-    color: #bfbfbf;
+    color: #ffffff;
     position: absolute;
     left: 0px;
     top: 0px;
@@ -175,9 +181,9 @@ footer {
 }
 .quick-link-list-div ul li a {
     text-decoration: none;
-    color: #bfbfbf;
+    color: #ffffff;
     font-size: 16px;
-    font-weight: 500;
+    font-weight: 300;
     padding-left: 20px;
     letter-spacing: 0.5px;
     transition: 0.4s;
@@ -186,14 +192,14 @@ footer {
     color: #ffffff;
 }
 .hovereffcethide {
-    color: #bfbfbf !important;
+    color: #ffffff !important;
 }
 .common-para {
     font-size: 16px;
     line-height: 29px;
     margin-bottom: 12px;
     color: #777777;
-    font-weight: 500;
+    font-weight: 400;
 }
 .common-para:last-child {
     margin-bottom: 0px;
@@ -222,7 +228,7 @@ footer {
     padding-right: 0px;
     vertical-align: middle;
     font-weight: 100;
-    color: #bfbfbf;
+    color: #ffffff;
     position: absolute;
     left: 0px;
     top: 0px;
@@ -230,7 +236,8 @@ footer {
     font-size: 18px;
 }
 .quick-link-list-div .common-para {
-    color: #bfbfbf;
+    color: #ffffff;
+    font-weight: 300;
 }
 .footer-social-div {
     margin-top: 25px;
@@ -254,67 +261,69 @@ footer {
     padding-right: 5%;
 }
 .bottom-footer-div .common-para {
-    color: #bfbfbf;
+    color: #ffffff;
     text-align: center;
     font-size: 15px;
+    font-weight: 300;
 }
 .common-btn-div .btn {
-    background-color: #653e6b;
+    background-color: #6a56a6;
     color: #ffffff !important;
     border-radius: 50px;
-    min-width: 200px;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    font-size: 17px;
-    border: 2px solid #653e6b;
+    font-size: 14px;
+    padding: 12px 40px;
+    border: 2px solid #6a56a6;
     font-weight: 500;
-    letter-spacing: 1.5px;
+    letter-spacing: 1px;
     position: relative;
+    text-transform: uppercase;
     -webkit-transition: all 250ms linear;
     -ms-transition: all 250ms linear;
     transition: all 250ms linear;
+    
+}
+.common-btn-div .btn:focus {
+    box-shadow: unset !important;
 }
 .common-btn-div .btn:hover {
-    background-color: transparent;
-    color: #653e6b !important;
+    /* background-color: transparent; */
+    /* color: #653e6b !important; */
     -webkit-transition: all 250ms linear;
     -ms-transition: all 250ms linear;
     transition: all 250ms linear;
-}
-.common-btn-div .btn i {
-    font-size: 16px;
-    margin-left: 5px;
+    box-shadow: rgb(106 86 166 / 39%) 0px 10px 25px 0px;
 }
 .home-banner-sec-main-div {
-    background: #f2f2f2 none repeat scroll 0% 0%;
-    padding-top: 180px;
-    padding-bottom: 80px;
+    background-image: url(../image/home-vector-bg.png);
+    padding-top: 50px;
+    padding-bottom: 50px;
+    display: flex;
+    align-items: center;
     width: 100%;
+    min-height: calc(100vh - 83px);
+    background-repeat: no-repeat;
+    background-position: top right;
+    background-size: contain;
 }
 .banner-heading-text {
-    color: #333333;
-    font-size: 70px;
-    font-weight: bold;
-    font-style: italic;
+    color: #58468c;
+    font-size: 62px;
+    font-weight: 500;
     letter-spacing: 1px;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 .highlight-text {
-    font-size: 54px;
-    font-weight: 600;
+    font-size: 44px;
+    font-weight: 400;
 }
 .banner-para-text {
     font-size: 18px;
     font-weight: 400;
-    color: #696969;
+    color: #716c80;
     line-height: 32px;
     margin-bottom: 30px;
 }
 .banner-img-div {
-    padding-left: 8%;
-    padding-right: 8%;
     text-align: center;
     position: relative;
 }
@@ -370,8 +379,8 @@ footer {
 }
 .common-heading-text {
     text-align: center;
-    font-size: 52px;
-    font-weight: 600;
+    font-size: 44px;
+    font-weight: 500;
     margin-bottom: 5px;
     letter-spacing: 0.5px;
     color: #333333;
@@ -379,7 +388,7 @@ footer {
 .common-hight-text {
     text-align: center;
     margin-bottom: 0px;
-    font-size: 19px;
+    font-size: 18px;
     color: #878787;
     font-weight: 400;
     letter-spacing: 0.5px;
@@ -389,7 +398,7 @@ footer {
     box-shadow: 0 18px 40px rgb(51 51 51 / 10%);
     background: #fff;
     border-radius: 5px;
-    padding: 50px 30px 63px;
+    padding: 50px 20px 63px;
     -webkit-transition: all 0.7s cubic-bezier(0.645, 0.045, 0.355, 1);
     -o-transition: all 0.7s cubic-bezier(0.645, 0.045, 0.355, 1);
     transition: all 0.7s cubic-bezier(0.645, 0.045, 0.355, 1);
@@ -405,7 +414,7 @@ footer {
     max-width: 90px;
 }
 .service-heading {
-    font-weight: 600;
+    font-weight: 500;
     line-height: 1.25;
     margin-bottom: 15px;
     font-size: 24px;
@@ -413,15 +422,16 @@ footer {
 }
 .service-para {
     color: #696969;
-    font-size: 15px;
+    font-size: 14px;
     margin-bottom: 0px;
     line-height: 25px;
     text-align: center;
+    font-weight: 400;
 }
 .circle-arrow-div {
     height: 56px;
     width: 56px;
-    background-color: #653e6b;
+    background-color: #6a56a6;
     border-radius: 50%;
     position: absolute;
     bottom: -25px;
@@ -487,7 +497,7 @@ footer {
     backface-visibility: hidden;
   }
   .flip-box-back {
-      background-color: #653e6b;
+      background-color: #6a56a6;
       color: white;
       transform: rotateY(180deg);
       padding-left: 5px;
@@ -502,17 +512,20 @@ footer {
       box-shadow: 1px 5px 10px 1px #54545478;
   }
   .flip-box-back h2 {
-      text-align: center;
-      color: #ffffff;
-      font-size: 24px;
-      font-style: italic;
-      margin-bottom: 0px;
+    text-align: center;
+    color: #ffffff;
+    font-size: 22px;
+    margin-bottom: 0px;
+    font-weight: 300;
   }
   /*--- flip-box css ----*/
 
   .our-approach-sec-main-div {
-    background: url(../image/our-approach-bg.webp) top 140px left no-repeat;
-    background-color: #f9f9f9;
+    background: url(../image/our-approach-bg-banner.png);
+    background-position: top left;
+    background-repeat: no-repeat;
+    background-size: contain;
+    /* background-color: #f0f6ff; */
 }
 .our-approach-sec-main-div .common-padding-div {
     padding-top: 0px !important;
@@ -573,8 +586,8 @@ footer {
     margin-bottom: 30px;
 }
 .sub-heading-text {
-    font-size: 42px;
-    font-weight: 600;
+    font-size: 40px;
+    font-weight: 500;
     color: #333333;
     letter-spacing: 0.5px;
 }
@@ -593,10 +606,11 @@ footer {
             margin-bottom: 10px;
 }
 .blog-contain-div {
-    border: 1px solid #dddddd;
+    border: 1px solid #e9e9e9;
     padding: 15px 15px;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
+    background-color: #ffffff;
 }
 .blog-dates-div a {
     font-size: 15px;
@@ -613,7 +627,7 @@ footer {
 .blog-small-heading {
     color: #333333;
     font-size: 21px;
-    font-weight: 600;
+    font-weight: 500;
     line-height: 30px;
     margin-bottom: 10px;
 }
@@ -625,19 +639,17 @@ footer {
     margin-top: 15px;
 }
 .blog-btn-div .btn {
-    background-color: #653e6b;
+    background-color: #6a56a6;
     color: #ffffff !important;
-    min-width: 160px;
     border-radius: 50px;
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-top: 8px;
-    padding-bottom: 8px;
-    font-size: 15px;
-    border: 2px solid #653e6b;
+    font-size: 13px;
+    padding: 10px 35px;
+    border: 2px solid #6a56a6;
     font-weight: 500;
-    letter-spacing: 1.5px;
+    letter-spacing: 1px;
     position: relative;
+    text-transform: uppercase;
+    transition: all 250ms linear;
     -webkit-transition: all 250ms linear;
     -ms-transition: all 250ms linear;
     transition: all 250ms linear;
@@ -669,7 +681,7 @@ footer {
     transition: all 250ms linear;
 }
 .how-we-do-box-div:hover {
-    background-color: #653e6b;
+    background-color: #6a56a6;
 }
 .how-we-do-box-div:hover > h5 {
     color: #ffffff;
@@ -693,7 +705,7 @@ footer {
     text-align: center;
     margin-top: 40px;
     margin-bottom: 20px;
-    font-weight: 600;
+    font-weight: 500;
     font-size: 24px;
     color: #333333;
     text-transform: capitalize;
@@ -710,7 +722,7 @@ footer {
     margin-bottom: 130px;
 }
 .facts-figures-sec-main-div {
-    background-color: #653e6b;
+    background-color: #f0f6ff;
 }
 .counter-box-div {
     text-align: center;
@@ -721,15 +733,15 @@ footer {
 }
 .counter-box-div h6 {
     font-size: 18px;
-    color: #ffffff;
-    margin-bottom: 10px;
+    color: #333333;
+    margin-bottom: 0px;
     letter-spacing: 0.5px;
     font-weight: 400;
 }
 .counter-box-div p {
-    margin-bottom: 0px;
+    margin-bottom: 5px;
     font-size: 50px;
-    color: #ffffff;
+    color: #333333;
     font-weight: 600;
 }
 .padding-left-div {
@@ -745,7 +757,7 @@ footer {
     margin-bottom: 10px;
 }
 .common-sub-points-div h4 .links {
-    font-weight: 600;
+    font-weight: 500;
 }
 .common-sub-points-div {
     margin-top: 25px;
@@ -972,10 +984,6 @@ footer {
     margin-right: 7px;
     width: 15px;
 }
-.current-openings-box-div .common-btn-div .btn i {
-    font-size: 14px;
-    margin-left: 7px;
-}
 .current-openings-box-div .common-btn-div .btn {
     font-size: 13px;
     min-width: inherit;
@@ -1054,6 +1062,16 @@ footer {
 /*--- Blog css ---*/
 .blog-main-div {
     padding-bottom: 50px;
+}
+.blog-section-div {
+    background-image: url(../image/blog-bg-banner.png);
+    background-position: left;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+}
+.blog-section-div .common-heading-text {
+    color: #ffffff;
 }
 .blog-box-main-div {
     margin-bottom: 50px;
@@ -1233,7 +1251,7 @@ footer {
         padding: 10px 0px;
     }
     .navbar-toggler {
-        background-color: #653e6b !important;
+        background-color: #6a56a6 !important;
         padding: 7px 12px !important;
         margin-right: 15px;
     }
@@ -1325,8 +1343,9 @@ footer {
         margin-bottom: 20px;
     }
     .home-banner-sec-main-div {
-        padding-top: 20px;
-        padding-bottom: 20px;
+        padding-top: 40px;
+        padding-bottom: 40px;
+        height: auto;
     }
     .banner-para-text {
         font-size: 15px;
@@ -1334,21 +1353,27 @@ footer {
         margin-bottom: 20px;
     }
     .common-btn-div .btn {
-        min-width: 180px;
-        font-size: 15px;
-        padding-left: 12px;
-        padding-right: 12px;
+        font-size: 12px;
+        padding: 12px 30px;
     }
     .banner-img-div {
         padding-left: 0px;
         padding-right: 0px;
-        margin-top: 70px;
+        margin-top: 0px;
         text-align: center;
+        margin-bottom: 25px;
+    }
+    .column-reverse-div {
+        flex-direction: column-reverse;
     }
     .banner-img-div .main-img {
-        max-width: 60%;
+        width: 100%;
         position: relative;
-        top: -10px;
+        top: 0px;
+        max-width: 320px;
+    }
+    .banner-contains-div {
+        padding-left: 0px;
     }
     .moving-icon4 {
         left: 0px;
@@ -1380,9 +1405,6 @@ footer {
     }
     .our-service-sub-div .row .col-md-4:last-child .our-service-box-div {
         margin-bottom: 0px;
-    }
-    .common-btn-div .btn i {
-        font-size: 14px;
     }
     .moving-icons-common {
         width: 35px;
@@ -1615,7 +1637,7 @@ footer {
         padding: 10px 0px;
     }
     .navbar-toggler {
-        background-color: #653e6b !important;
+        background-color: #6a56a6 !important;
         padding: 7px 12px !important;
         margin-right: 15px;
     }
@@ -1687,18 +1709,25 @@ footer {
         max-width: 70px;
     }
     .home-banner-sec-main-div {
-        padding-top: 80px;
+        padding-top: 40px;
         padding-bottom: 40px;
+        height: auto;
+    }
+    .banner-img-div .main-img {
+        max-width: 95%;
+    }
+    .banner-contains-div {
+        padding-left: 5%;
     }
     .moving-icons-common {
         position: absolute;
         width: 40px;
     }
     .highlight-text {
-        font-size: 30px;
+        font-size: 26px;
     }
     .banner-heading-text {
-        font-size: 42px;
+        font-size: 36px;
         margin-bottom: 15px;
     }
     .banner-para-text {
@@ -1707,13 +1736,8 @@ footer {
         margin-bottom: 15px;
     }
     .common-btn-div .btn {
-        min-width: 180px;
-        font-size: 15px;
-        padding-left: 12px;
-        padding-right: 12px;
-    }
-    .common-btn-div .btn i {
-        font-size: 14px;
+        font-size: 12px;
+        padding: 12px 30px;
     }
     .common-padding-div {
         padding-top: 50px;
@@ -1947,17 +1971,18 @@ footer {
         max-width: 70px;
     }
     .home-banner-sec-main-div {
-        padding-top: 100px;
-        padding-bottom: 40px;
+        padding-top: 60px;
+        padding-bottom: 60px;
+        height: auto;
     }
     .moving-icons-common {
         width: 45px;
     }
     .highlight-text {
-        font-size: 34px;
+        font-size: 32px;
     }
     .banner-heading-text {
-        font-size: 46px;
+        font-size: 40px;
         margin-bottom: 25px;
     }
     .banner-para-text {
@@ -1965,13 +1990,8 @@ footer {
         line-height: inherit;
     }
     .common-btn-div .btn {
-        min-width: 190px;
-        font-size: 16px;
-        padding-left: 12px;
-        padding-right: 12px;
-    }
-    .common-btn-div .btn i {
-        font-size: 14px;
+        font-size: 12px;
+        padding: 12px 35px;
     }
     .common-padding-div {
         padding-top: 50px;
@@ -2182,21 +2202,28 @@ footer {
         max-width: 185px;
     }
     .home-banner-sec-main-div {
-        padding-top: 120px;
+        padding-top: 60px;
         padding-bottom: 60px;
     }
     .moving-icons-common {
         width: 55px;
     }
     .banner-heading-text {
-        font-size: 56px;
+        font-size: 48px;
     }
     .highlight-text {
-        font-size: 40px;
+        font-size: 36px;
+    }
+    .banner-para-text {
+        font-size: 17px;
     }
     .common-padding-div {
         padding-top: 70px;
         padding-bottom: 70px;
+    }
+    .common-btn-div .btn {
+        font-size: 13px;
+        padding: 11px 35px;
     }
     .common-heading-text {
         font-size: 44px;
@@ -2359,17 +2386,17 @@ footer {
 }
 @media only screen and (min-width: 1441px) and (max-width: 1660px) { 
     .home-banner-sec-main-div {
-        padding-top: 130px;
-        padding-bottom: 70px;
+        padding-top: 60px;
+        padding-bottom: 60px;
     }
     .moving-icons-common {
         width: 60px;
     }
     .banner-heading-text {
-        font-size: 60px;
+        font-size: 52px;
     }
     .highlight-text {
-        font-size: 42px;
+        font-size: 38px;
     }
     .common-padding-div {
         padding-top: 80px;
